# yos

./: Cargo.toml  README.md  grcov_cov.sh  howto.md  results.xml  source_cov.sh
.github/workflow/: build.yml  clippy.yml
.github/workflows/: build.yml  check.yml  ci.yml  clippy.yml  codecov.yml  cov._yml  cov.yml  coverage.yml  coveralls.yml  fmt.yml  grcov.yml  test.yml
coverage/: lcov.info
examples/: bitstring.rs  evo_standard.rs  howto.rs
howtos/: howto_cov.md  source_cov.sh
src/: lib.rs  primitive_u64.rs  primitive_u8.rs  standard.rs  traits.rs
src/evolution/: mod.rs  standard.rs  traits.rs
yos-binheap/: Cargo.toml  README.md
yos-binheap/examples/: binheap.rs  hole.rs
yos-binheap/src/: binheap.rs  hole.rs  iter.rs  lib.rs  ndx.rs
yos-binheap/tests/: binheap.rs  hole.rs
yos-collections/: Cargo.toml  README.md
yos-collections/examples/: binary_heap.rs  binheap.rs  binomial_heap.rs
yos-collections/src/: binheap.rs  lib.rs
yos-distances/: Cargo.toml  README.md
yos-distances/examples/: sift3.rs
yos-distances/src/: distances.rs  lib.rs
yos-distances/tests/: distances.rs
yos-memcursor/: Cargo.toml  README.md
yos-memcursor/examples/: memcursor.rs
yos-memcursor/src/: lib.rs  memcursor.rs
yos-num/: Cargo.toml
yos-num/src/: lib.rs  one.rs  zero.rs
yos-probdts/: Cargo.toml  README.md
yos-probdts/examples/: bloom_filter.rs  k2hasher.rs
yos-probdts/src/: bloom_filter.rs  lib.rs
yos_bits/examples/: bits8.rs
yos_bitstring/: Cargo.toml
yos_bytes/: Cargo.toml
yos_core/: Cargo.toml
yos_evolution/: Cargo.toml
(+48 files in other folders)
